# djangoproject

./: Dockerfile  db.sqlite3  docker-compose.yml  package-lock.json  pyproject.toml  requirements.txt  tailwind.config.js  text.txt
app/: admin.py  managers.py  models.py  urls.py  views.py
app/migrations/: 0001_initial.py  0002_create_superuser.py  0003_article_creator_alter_article_word_count.py  0004_alter_article_content_alter_article_created_at_and_more.py  0005_alter_article_options.py  0006_alter_article_options.py  0007_alter_userprofile_managers_alter_userprofile_email.py
djangocourse/: settings.py  urls.py
locale/id/LC_MESSAGES/: django.mo  django.po
static/: input.css  output.css
templates/app/: article_create.html  article_delete.html  article_update.html  base.html  home.html
templates/app/layouts/: base_form.html
templates/registration/: login.html
